tests/fixtures/npm/run_failure.txt
> myproject@1.0.0 build
> next build

npm warn peer dependencies warning
Creating an optimized production build...

Failed to compile.

./src/app/page.tsx
Type error: Argument of type 'string' is not assignable to parameter of type 'number'.

  3 | export default function Page() {
  4 |   const x: number = "hello";
  |                       ^^^^^^^

Build failed because of webpack errors
